fix align hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
     --primary-color: #0f1b4c;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -68,6 +73,7 @@ a {
     position: relative;
     background-color: #e6f0ff;
     height: calc(100vh - 90px);
+    justify-content: center;
 }
 
 .navbar {
@@ -109,11 +115,7 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -121,7 +123,7 @@ a {
     color: #687691;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     font-weight: 700;
     font-size: 6.4rem;
@@ -129,11 +131,11 @@ a {
     color: #000336;
 }
 
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     font-weight: 400;
     font-size: 1.8rem;
     line-height: 1.78;
@@ -141,7 +143,7 @@ a {
     margin-top: 30px;
 }
 
-.hero .hero-cta {
+.hero-wrap .hero-cta {
     margin-top: 40px;
     min-width: 170px;
 }
